--- a/index.html
+++ b/index.html
@@ -188,22 +188,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>49</span>
-          <span><a href="https://twitter.com/sbarolo/status/1343243020821381120?s=20">In Progress</a></span>
+          <span style="background-color:#43609A; color:#fff">Blue</span>
         </li>
         <li class='game-left spacer region region-right'></li>
         <li class='game-left game-bottom'>
           <span>50</span>
-          <span><a href="https://twitter.com/sbarolo/status/1343258877018693634?s=20">In Progress</a></span>
+          <span style="background-color:#77548F; color:#fff">Violet</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>51</span>
-          <span><a href="https://twitter.com/sbarolo/status/1343308438441496577?s=20">In Progress</a></span>
+          <span style="background-color:#95CBAA; color:#000">Sea Green</span>
         </li>
         <li class='game-left spacer region region-right'></li>
         <li class='game-left game-bottom'>
           <span>52</span>
-          <span><a href="https://twitter.com/sbarolo/status/1343375532709318656?s=20">In Progress</a></span>
+          <span style="background-color:#CAA8C2; color:#fff">Purple Mountains Majesty</span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
@@ -268,22 +268,22 @@
       <ul class='round round-3'>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1343576357989658624?s=20">In Progress</a></span>
+          <span style="background-color:#2C9ABE; color:#fff">Cerulean</span>
           <span>53</span>
         </li>
         <li class='game-right spacer region region-left'></li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1343602458019454977?s=20">In Progress</a></span>
+          <span style="background-color:#D196B7; color:#000">Orchid</span>
           <span>54</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1343642133773873154?s=20">In Progress</a></span>
+          <span style="background-color:#5D5390; color:#fff">Blue-Violet</span>
           <span>55</span>
         </li>
         <li class='game-right spacer region region-left'></li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1343679886704181250?s=20">In Progress</a></span>
+          <span style="background-color:#2A93B1; color:#fff">Pacific Blue</span>
           <span>56</span>
         </li>
         <li class='spacer'>&nbsp;</li>
