--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>57</span>
-          <span></span>
+          <span style="background-color:#43609A; color:#fff">Blue</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>58</span>
-          <span></span>
+          <span style="background-color:#95CBAA; color:#000">Sea Green</span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
@@ -224,7 +224,7 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>61</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1344335837597753351?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
@@ -255,12 +255,12 @@
       <ul class='round round-4'>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1344019108573155328?s=20">In Progress</a></span>
           <span>59</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1344053840459526146?s=20">In Progress</a></span>
           <span>60</span>
         </li>
         <li class='spacer'>&nbsp;</li>
