--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <ul class='round round-4'>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1344019108573155328?s=20">In Progress</a></span>
+          <span style="background-color:#2C9ABE; color:#fff">Cerulean</span>
           <span>59</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
