--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>61</span>
-          <span><a href="https://twitter.com/sbarolo/status/1344335837597753351?s=20">In Progress</a></span>
+          <span style="background-color:#95CBAA; color:#000">Sea Green</span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
@@ -235,19 +235,19 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game final'>
           <span>64</span>
-          <span></span>
+          <span style="background-color:#2C9ABE; color:#fff">Cerulean</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game third-place'>
           <span>63</span>
-          <span></span>
+          <span style="background-color:#5D5390; color:#fff">Blue-Violet</span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
       <ul class='round semi-final'>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span style="background-color:#2C9ABE; color:#fff">Cerulean</span>
           <span>62</span>
         </li>
         <li class='spacer'>&nbsp;</li>
@@ -260,7 +260,7 @@
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1344053840459526146?s=20">In Progress</a></span>
+          <span style="background-color:#5D5390; color:#fff">Blue-Violet</span>
           <span>60</span>
         </li>
         <li class='spacer'>&nbsp;</li>
